Cant get js to find classes

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <button class="contact">Contact</button>
             <p6>512-297-2423</p6>
         </div>
-
+        <div class="preloader"><img src="../HW-19-JS/Images/preloader.jpeg"></div>
     </body>
+    <script src="../HW-19-JS/JS/Index.js" type="text/javascript"></script>
 </html>
