Fully linking JS and updating

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <title>Home Page</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Poppins&family=Righteous&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="../HW-19-JS/CSS/styles.css">
+        <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     </head>
 
     <body>
         <nav id="navbar">
-            <img src="../HW-19-JS/Images/logo.png">
+            <img src="Images/logo.png">
             <ul class="navitems">
                 <ul>Menu</ul>
                 <ul>Catering</ul>
@@ -30,10 +32,10 @@
         </div>
 
         <section class="container1">
-            <img class="clock" src="../HW-19-JS/Images/hours.png">
+            <img class="clock" src="Images/hours.png">
             <h2 class="time">Sun-Thurs. 11am - 9pm<br>Friday & Sat. 11am - 10pm</h2>
             <h3>Happy Hour<br>Mon-Thurs. ALL DAY<br>Fri.'til 7pm<br>Sat-Sun.'til 5pm</h3>
-            <img class="map" src="../HW-19-JS/Images/maps 1.png">
+            <img class="map" src="Images/maps 1.png">
             <h2>SOUTH CONGRESS</h2>
             <h4>2218 College Ave, Austin, TX<br>78704</h4>
         </section>
@@ -46,25 +48,28 @@
     
         <section id="reviews">
             <h5>Swipe left to see the fun!</h5>
-            <img class="feat" src="../HW-19-JS/Images/image 72.png">
-            <img class="star" src="../HW-19-JS/Images/Frame 8.png">
-            <img class="rev" src="../HW-19-JS/Images/Frame 12.png">
+            <img class="feat" src="Images/image 72.png">
+            <img class="star" src="Images/Frame 8.png">
+            <img class="rev" src="Images/Frame 12.png">
         </section>
         <div class="bottom">
             <p8>Click to view our Daily Happy Hour specials!</p8>
         </div>
 
         <section class="footimg">
-            <img src="../HW-19-JS/Images/FOOTER.png">
+            <img src="Images/FOOTER.png">
         </section>
 
         <div id="footer">
-            <img src="../HW-19-JS/Images/lucy's transparent logo.png">
+            <img src="Images/lucy's transparent logo.png">
             <p5>2218 College Avenue<br>Austin, Texas 78704</p5>
             <button class="contact">Contact</button>
             <p6>512-297-2423</p6>
         </div>
-        <div class="preloader"><img src="../HW-19-JS/Images/preloader.jpeg"></div>
+        <div class="preloader">
+            <img src="Images/—Pngtree—colorful loading icon_5326551.png">
+        </div>
+        <script src="JS/Index.js" type="text/javascript"></script>
     </body>
-    <script src="../HW-19-JS/JS/Index.js" type="text/javascript"></script>
+
 </html>
